--- a/learn-management-system/src/main/resources/application-dev.properties
+++ b/learn-management-system/src/main/resources/application-dev.properties
@@ -23,15 +23,15 @@ spring.datasource.password=root
 spring.datasource.validationQuery=SELECT 1
 
 
-####redis≈‰÷√
-#spring.redis.host=redis.learn.com
-#spring.redis.database=2
-#spring.redis.port=6379
-#spring.redis.password=hrh2019
-#spring.redis.pool.max-idle=8
-#spring.redis.pool.min-idle=0
-#spring.redis.pool.max-active=8
-#spring.redis.pool.max-wait=-1
+##redis≈‰÷√
+spring.redis.host=redis.learn.com
+spring.redis.database=2
+spring.redis.port=6379
+spring.redis.password=hrh123456.
+spring.redis.pool.max-idle=8
+spring.redis.pool.min-idle=0
+spring.redis.pool.max-active=8
+spring.redis.pool.max-wait=-1
 
 
 
