--- a/learn-management-system/src/main/resources/application.properties
+++ b/learn-management-system/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 #环境配置(dev开发环境 test 测试环境 pord生产环境)
-spring.profiles.active=dev
+spring.profiles.active=prod
 
+#servlet 映射路径
+server.servlet.context-path=/learn
 
 ##logging
 logging.level.root=info
@@ -24,9 +26,6 @@ spring.messages.encoding=UTF-8
 #JSP
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
-
-#servlet 映射路径
-server.servlet.context-path=/learn
 
 #mybaits
 mybatis.configuration.cache-enabled=true
