--- a/learn-management-system/src/main/resources/swagger_dev.properties
+++ b/learn-management-system/src/main/resources/swagger_dev.properties
@@ -1,5 +1,5 @@
 swagger.base.package=com.learn.management.controller
-swagger.host=dev.learn.com/api
+swagger.host=dev.learn.com
 swagger.is.show=true
 swagger.termsOfServiceUrl=www.yzhrh.com
 swagger.title=学习管理系统
